Update index.html and stylesheets.css
Add background

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stranded Orca</title>
-    <link rel="stylesheet" href="stylesheets.css">
+    <link rel="stylesheet" href="CSS/stylesheets.css">
 </head>
 <body>
     <div class="flex menu">
-        <img src="" alt="logo" id="logo">
+        <div>
+            <!-- <img src="" alt="logo" id="logo"> -->
+        </div>
         <div class="flex">
             <nav>
                 <a href="index.html">Home</a>
@@ -19,9 +21,13 @@
             </nav>
         </div>
     </div>
-    <div class="hero">
-        <h1>Stranded Orca</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corporis suscipit voluptates repellendus ipsum cum in. Vel ullam expedita tenetur id! Illo distinctio tempora nostrum pariatur mollitia voluptates soluta quos?</p>
+
+    <div class="hero flex">
+        <div>
+            <h1>Stranded Orca</h1>
+            <p>Just a human trying to get her shit together.</p>
+        </div>
     </div>
+
 </body>
 </html>
