Update index.html and stylesheets.css

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
 
     <div class="hero flex">
-        <div>
+        <div class="hero-text">
             <h1>Stranded Orca</h1>
-            <p>Just a human trying to get her shit together.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, repellat.</p>
         </div>
     </div>
 
