Add background for homepage (index.html)

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         </div>
     </div>
 
-    <div class="hero flex">
-        <div class="hero-text">
+    <div class="hero">
+        <div class="hero-text flex">
             <h1>Stranded Orca</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, repellat.</p>
+            <p style="visibility: hidden">Just a human trying to get her shit together.</p>
         </div>
     </div>
 
